argocd/routes/httproutes.yml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: argocd-server
  namespace: argocd
spec:
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: shared-gateway
      namespace: envoy-gateway-system
      sectionName: tls-listener
  hostnames:
    - "argocd.hzp.local"
  rules:
    - backendRefs:
        - group: ""
          kind: Service
          name: argocd-server
          port: 80
